Add configuration property for subscription recalculation interval
Add maintenance.subscription_recalculation_interval_ms property
with a default value of 2 hours (7200000 ms), matching the interval
used in SPI's production setup.

Part of #1562

Signed-off-by: pmady <pavan4devops@gmail.com>

--- a/cuebot/src/main/resources/opencue.properties
+++ b/cuebot/src/main/resources/opencue.properties
@@ -224,6 +224,11 @@ history.archive_jobs_cutoff_hours=72
 # Delete down hosts automatically.
 maintenance.auto_delete_down_hosts=false
 
+# Interval in milliseconds for subscription recalculation task.
+# Default is 2 hours (7200000 ms). This task fixes subscription
+# accountability issues that can occur at large scale.
+maintenance.subscription_recalculation_interval_ms=7200000
+
 # Set hostname/IP of the smtp host. Will be used for mailing
 smtp_host=smtp
 
